label spacing issue fix

--- a/scss/dark-mode.scss
+++ b/scss/dark-mode.scss
@@ -677,7 +677,7 @@ ul.sapUshellInner {
                                             &:last-child{
                                                 position: absolute;
                                                 right: 24px;
-                                                top: 30px;
+                                                top: 24px;
                                                 z-index: 1;
                                                 .sapMSwtOn{
                                                     background-color: #6372A4;
@@ -695,10 +695,12 @@ ul.sapUshellInner {
                                                         .sapMSwtLabelOn{
                                                             color: white;
                                                             width: auto;
+                                                            padding-top: 5px;
                                                         }
                                                         .sapMSwtLabelOff{
                                                             color: #8A8C91;
                                                             width: auto;
+                                                            padding-top: 5px;
                                                         }
                                                     }
                                                 }
